[tool.poetry]
name = "primos-isalive-backend"
version = "0.1.0"
description = "Getting realtime data from containers status."
authors = ["Primo"]
license = "MIT"
readme = "README.md"
packages = [{include = "primos_isalive_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
